--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+*.log
+*.log.*
 
 # Local History for Visual Studio Code
 .history/
